Fixed extra padding on search boxes
+ Small oversight. Also committing to ensure functional pushed code, small local issue has been resolved.

--- a/frontEnd/src/styling/Twitter.css
+++ b/frontEnd/src/styling/Twitter.css
@@ -47,7 +47,7 @@
     border: 1px solid #ddd;
     width: 450px;
     margin-left: 40px;
-    margin-top: 40px;
+    margin-top: 5px;
 }
 .clear_button {
     transform: translateX(-100%);
